# synchromcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  TODO.md  WORK.md  build.sh  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
docs/: 404.html  index.html  search.json
docs/book-outline/: index.html
docs/chapters/01-introduction/: index.html
docs/chapters/02-architecture/: index.html
docs/chapters/05-filesystem/: index.html
docs/chapters/13-search-research/: index.html
docs/chapters/24-server-development/: index.html
docs/chapters/25-production-ops/: index.html
src/synchromcp/: __init__.py  __main__.py  _version.py  cli.py  config.py  models.py  readers.py  sync.py  writers.py
src_docs/: README.md  book-outline.md  index.md
src_docs/chapters/: 01-introduction.md  02-architecture.md  05-filesystem.md  13-search-research.md  24-server-development.md  25-production-ops.md
tests/: __init__.py  test_cli.py  test_config.py  test_docs_config.py  test_models.py  test_readers.py  test_sync.py  test_writers.py
