[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "synchromcp"
dynamic = ["version"]
description = "Synchronize MCP server configurations across AI apps and machines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Adam Twardoch", email = "adam+github@twardoch.com" }]
keywords = ["mcp", "model-context-protocol", "claude", "cursor", "ai", "sync"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "fire>=0.5.0",
    "pydantic>=2.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "zensical>=0.0.10",
]

[project.scripts]
synchromcp = "synchromcp.cli:main"

[project.urls]
Homepage = "https://github.com/twardoch/synchromcp"
Repository = "https://github.com/twardoch/synchromcp"
Issues = "https://github.com/twardoch/synchromcp/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/synchromcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/synchromcp"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]
exclude = ["src/synchromcp/_version.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
